--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -79,6 +79,7 @@
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
                     <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor"
                         required type="text" minlength="13" maxlength="14"
+                        pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}"
                     />
                     <span class="mensagem-erro"></span>
                 </fieldset>
