capturando evento de um nodeList

--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -61,7 +61,7 @@
             <form class="principal__formulario" data-formulario>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="nome">Nome</label>
-                    <input name="nome" id="nome" class="campo__escrita" type="text"/ minlength="3">
+                    <input name="nome" id="nome" class="campo__escrita" type="text"/ minlength="3" required >
                     <span class="mensagem-erro"></span>
                 </fieldset>
 
@@ -161,6 +161,9 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Moni</span>Bank</h2>
         </section>
     </footer>
+
+    <script src="../js/script.js" type="module"></script>
+
 </body>
 
 </html>
