--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -76,7 +76,7 @@
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
-                    <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
+                    <label class="campo__etiqueta" for="cpf">CPF (000.000.000-00)</label>
                     <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor"
                         required type="text" minlength="13" maxlength="14"
                         pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}"
